# startup-hell-native-dependencies

./: .gitignore  .gitmodules  build_all.py
src/: CMakeLists.txt  ImGuiCurveWidget.cpp  ImGuiCurveWidget.h
wrapper/SHNative.NET/: SHNative.NET.sln
wrapper/SHNative.NET/SHNative.NET/: Interface.cs  SHNative.NET.csproj  Wrapper.cs
